<?xml version="1.0"?>
<package>
  <name>sbpl</name>
  <version>1.4.0</version>
  <description>Search-based planning library (SBPL) with CHRISLab modifications.</description>
  <maintainer email="mike@vanadiumlabs.com">Michael Ferguson</maintainer>
  <maintainer email="robotics@cnu.edu">David Conner</maintainer>
  <license>BSD</license>

  <url type="website">http://sbpl.net</url>
  <url type="bugtracker">https://github.com/CNURobotics/sbpl/issues</url>
  <url type="repository">https://github.com/CNURobotics/sbpl</url>

  <author>Search-Based Planning Lab</author>

  <buildtool_depend>cmake</buildtool_depend>
  <build_depend>cmake</build_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
